chore: add unocss-preset-antd

--- a/packages/app/src/styles/index.css
+++ b/packages/app/src/styles/index.css
@@ -4,3 +4,12 @@ body,
 #root {
   --at-apply: "h-full";
 }
+
+/* dark theme */
+:root {
+  --at-apply: "antd-variables-default";
+}
+
+body {
+  --at-apply: "antd-body";
+}
