--- a/packages/app/src/components/reactflow/overview.css
+++ b/packages/app/src/components/reactflow/overview.css
@@ -23,7 +23,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  fontweight: 700;
+  font-weight: 700;
 }
 
 .react-flow__node.annotation {
@@ -58,4 +58,5 @@
   width: 100%;
   margin-top: 5px;
   font-size: 10px;
+  background-color: white;
 }
